chore: Use List.of than Arrays.asList